# secrets

./: Cargo.toml
src/: error.rs  main.rs
src/models/: mod.rs  ticket.rs  user.rs
src/routes/: mod.rs  routes_users.rs
src/routes/api/: mod.rs  routes_login.rs  routes_tickets.rs  routes_users.rs
src/web/: routes_login.rs
