[package]
name = "secrets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20"}
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tracing-subscriber = "0.3.17"
tracing = "0.1"